--- a/vignettes/bang-vignette.Rmd
+++ b/vignettes/bang-vignette.Rmd
@@ -16,7 +16,7 @@ bibliography: bang.bib
 knitr::opts_chunk$set(comment = "#>", collapse = TRUE)
 ```
 
-The **bang** package uses the **rust** package [@rust] to produce random samples, using the generalized ratio-of-uniforms method, from posterior distributions involved in certain Bayesian models.  **rust** was originally created to perform this role in the package **revdbayes** [@revdbayes], which deals with basic extreme value models with only 2 or 3 parameters.  The aim of **bang** is to tackle further models.  
+The **bang** package uses the **rust** package [@rust] to produce random samples, using the generalized ratio-of-uniforms method, from the posterior distributions involved in certain Bayesian models.  **rust** was originally created to perform this role in the package **revdbayes** [@revdbayes], which deals with basic extreme value models with only 2 or 3 parameters.  The aim of **bang** is to tackle further models.  
 
 ## The generalized ratio-of-uniforms method as an alternative to MCMC
 
@@ -26,7 +26,7 @@ In comparison to sampling from a posterior distribution using a Markov Chain Mon
 
 Only in some simple special cases is it possible to find algebraically the dimensions of the smallest possible bounding cuboid.  In practice, these dimensions are found using optimization methods.  The first stage is to find the mode of the target density, after which the density is relocated so that its mode is at the origin.  This simple strategy will tend to increase the efficiency of the method [@WGS1991].  This also makes the search for the remaining dimensions of the bounding cuboid more reliable as does the target density being unimodal.  Unimodality of the density is not a necessary condition for the ratio-of-uniforms algorithm to be applicable but a lack of local modes does mean that the numerical optimizations should find the correct bounding cuboid.
 
-Direct simulation methods like the ratio-of-uniforms methods are not going to replace MCMC as a general method for simulating from posterior densities.  However, they may provide a useful alternative for some commonly-used models.
+Direct simulation methods like the ratio-of-uniforms methods will not replace MCMC as a general method for simulating from posterior densities.  However, they may provide a useful alternative for some commonly-used models.
 
 ## An example: hierarchical binomial-beta model
 
@@ -41,7 +41,7 @@ library(bang)
 # (d) Note that the mode is relocated to (0, 0) in the plot
 rat_res <- hef(model = "binom_beta", data = rat, rotate = FALSE, n = 10000)
 plot(rat_res, ru_scale = TRUE)
-# This is the estimated location of the posterior mode, which agrees with Figure 5.3 of Gelman et al. (2014)
+# This is the estimated posterior mode, which agrees with Figure 5.3 of Gelman et al. (2014)
 rat_res$f_mode
 ```
 
