Add 1-way ANOVA vignette. [ci skip]

--- a/vignettes/bang.bib
+++ b/vignettes/bang.bib
@@ -117,3 +117,25 @@ url={http://dx.doi.org/10.18637/jss.v040.i08}
     note = {R package version 1.2.1},
     url = {https://CRAN.R-project.org/package=revdbayes},
   }
+
+@article{NC2014,
+author="Northrop, P. J. and Chandler, R. E.",
+title="Quantifying Sources of Uncertainty in Projections of Future Climate",
+journal="",
+year="2014",
+volume="27",
+pages="8793--8808",
+doi="10.1175/JCLI-D-14-00265.1",
+url="https://doi.org/10.1175/JCLI-D-14-00265.1"
+}
+
+@ARTICLE{Gelman2006,
+    author="Gelman, A.",
+    title="Prior distributions for variance parameters in hierarchical models",
+    year=2006, journal="{B}ayesian Analysis",
+    volume="1",
+    number="3",
+    pages="515--533",
+    url = {https://doi.org/10.1214/06-BA117A},
+    note=""
+    }
