--- a/vignettes/bang-anova-vignette.Rmd
+++ b/vignettes/bang-anova-vignette.Rmd
@@ -22,7 +22,7 @@ Y_{ij} = \mu + \alpha_i + \epsilon_{ij} = \theta_i + \epsilon_{ij}, \quad\mbox{f
 \end{equation*}
 where  $\alpha_i \sim N(0, \sigma_\alpha^2)$, so that $\theta_i = \mu + \alpha_i \sim N(\mu, \sigma_\alpha^2)$, and $\epsilon_{ij} \sim N(0, \sigma^2)$ and all random variables are independent.  Variability of the response variable $Y$ about an overall level $\mu$ is decomposed into contributions $\alpha_i, i = 1, \ldots, I$ from an explanatory factor indicating membership of group $i$ and a random error term $\epsilon_{ij}$.
 
-This model has $I + 3$ parameters: $\boldsymbol{\mathbf{\phi}} = (\mu, \sigma_\alpha, \sigma)$ and $\boldsymbol{\mathbf{\alpha}} = (\alpha_1, \ldots, \alpha_I)$.  Equivalently, we could replace $\boldsymbol{\mathbf{\alpha}}$ by $\boldsymbol{\mathbf{\theta}} = (\theta_1, \ldots, \theta_I)$.  The [Appendix](#appendix) shows that the full posterior $\pi(\boldsymbol{\mathbf{\alpha}},\boldsymbol{\mathbf{\phi}} \mid \boldsymbol{\mathbf{y}})$ can be factorised into products of lower-dimensional densities.  If it is assumed that $\mu$ and $(\sigma_\alpha, \sigma)$ are independent *a priori* and a normal prior is set for $\mu$ then the only challenging part of sampling from $\pi(\boldsymbol{\mathbf{\alpha}},\boldsymbol{\mathbf{\phi}} \mid \boldsymbol{\mathbf{y}})$ is to simulate from the two-dimensional density $\pi(\sigma_\alpha, \sigma \mid \boldsymbol{\mathbf{y}})$.  Otherwise, we need to simulate from $\pi(\mu, \sigma_\alpha, \sigma \mid \boldsymbol{\mathbf{y}})$.  The **bang** function `hanova1` uses the **rust** package [@rust] to simulate from these densities.  In sampling from the marginal posterior density $\pi(\phi \mid \boldsymbol{\mathbf{y}})$ we use a parameterisation designed to improve the efficiency of sampling.  In this case we work with $(\log\sigma_\alpha, \log\sigma)$.  We illustrate the use of `hanova1` using two example datasets.
+This model has $I + 3$ parameters: $\boldsymbol{\mathbf{\phi}} = (\mu, \sigma_\alpha, \sigma)$ and $\boldsymbol{\mathbf{\alpha}} = (\alpha_1, \ldots, \alpha_I)$.  Equivalently, we could replace $\boldsymbol{\mathbf{\alpha}}$ by $\boldsymbol{\mathbf{\theta}} = (\theta_1, \ldots, \theta_I)$.  The [Appendix](#appendix) shows that the full posterior $\pi(\boldsymbol{\mathbf{\alpha}},\boldsymbol{\mathbf{\phi}} \mid \boldsymbol{\mathbf{y}})$ can be factorised into products of lower-dimensional densities.  If it is assumed that $\mu$ and $(\sigma_\alpha, \sigma)$ are independent *a priori* and a normal prior is set for $\mu$ then the only challenging part of sampling from $\pi(\boldsymbol{\mathbf{\alpha}},\boldsymbol{\mathbf{\phi}} \mid \boldsymbol{\mathbf{y}})$ is to simulate from the two-dimensional density $\pi(\sigma_\alpha, \sigma \mid \boldsymbol{\mathbf{y}})$.  Otherwise, we need to simulate from $\pi(\mu, \sigma_\alpha, \sigma \mid \boldsymbol{\mathbf{y}})$.  The *bang* function `hanova1` uses the *rust* package [@rust] to simulate from these densities.  In sampling from the marginal posterior density $\pi(\phi \mid \boldsymbol{\mathbf{y}})$ we use a parameterisation designed to improve the efficiency of sampling.  In this case we work with $(\log\sigma_\alpha, \log\sigma)$.  We illustrate the use of `hanova1` using two example datasets.
 
 ## Late 21st Century Global Temperature Projection Data
 
@@ -55,11 +55,11 @@ We use `hanova1` to sample from the posterior distribution of the parameters bas
 # The response is the index, the explanatory factor is the GCM
 res26_2 <- hanova1(resp = RCP26_2[, "index"], fac = RCP26_2[, "GCM"])
 # Plots relating to the posterior sample of the variance parameters
-plot(res26_2)
+plot(res26_2, params = "ru")
 plot(res26_2, ru_scale = TRUE)
 ```
 
-The plot on the left shows the values sampled from the posterior distribution of $(\sigma_\alpha, \sigma)$ with superimposed density contours.  We see that the posterior distribution is located at values for which $\sigma_\alpha$ is much greater than $\sigma$, by a factor of nearly 10.  On the right is a similar plot displayed on the scale used for sampling, $(\log \sigma_\alpha, \log \sigma)$, after relocation of the posterior mode to the origin and rotation to near circularity of the density contours.
+The plot on the left shows the values sampled from the posterior distribution of $(\sigma_\alpha, \sigma)$ with superimposed density contours.  We see that the posterior distribution is located at values for which $\sigma_\alpha$ is much greater than $\sigma$, by a factor of nearly 10.  On the right is a similar plot displayed on the scale used for sampling, $(\rho_1, \rho_2)=(\log \sigma_\alpha, \log \sigma)$, after relocation of the posterior mode to the origin and rotation and scaling to near circularity of the density contours.
 
 We summarise the marginal posterior distribution of $\mu$ using a histogram with a superimposed kernel density estimate.
 
@@ -72,16 +72,17 @@ lines(density(res26_2$sim_vals[, "mu"]))
 
 In the temperature projection example sampling was conducted on the scale $(\log\sigma_\alpha, \log\alpha)$ and was unproblematic.  It would also have been unproblematic had we sampled on the original $(\sigma_\alpha, \sigma)$ scale.  To show that there are examples where the latter is not the case we consider a small dataset presented in Section 11.6 of @BDA2014.  The response variable is the coagulation time of blood drawn from 24 animals allocated to different diets.  The crucial aspect of this dataset is that the explanatory factor (diet) has only 4 levels.  This means that there is little information about $\sigma_\alpha$ in the data.  Unless strong prior information about $\sigma_\alpha$ is provided the posterior distribution for $\sigma_\alpha$ will tend to have a heavy upper tail [@Gelman2006].  
 
-The generalized ratio-of-uniforms method used by **rust** can fail for heavy-tailed densities and this is indeed the case for these data if we try to sample directly from $\pi(\sigma_\alpha, \sigma \mid \boldsymbol{\mathbf{y}})$.  One solution is to reparameterize to $(\log\sigma_\alpha, \log\sigma)$, which `hanova1` implements by default.  Another possibility is to increase the generalized ratio-of-uniforms tuning parameter `r` from the default value of 1/2 used in **rust**.  These approaches are illustrated below.
+The generalized ratio-of-uniforms method used by *rust* can fail for heavy-tailed densities and this is indeed the case for these data if we try to sample directly from $\pi(\sigma_\alpha, \sigma \mid \boldsymbol{\mathbf{y}})$.  One solution is to reparameterize to $(\log\sigma_\alpha, \log\sigma)$, which `hanova1` implements by default.  Another possibility is to increase the generalized ratio-of-uniforms tuning parameter `r` from the default value of 1/2 used in *rust*.  These approaches are illustrated below.
 
-```{r, fig.show='hold', fig.width = 4, fig.height=4, fig.align='center'}
+```{r, fig.show='hold', fig.width = 3.45, fig.height = 3.45}
 coag1 <- hanova1(resp = coagulation[, 1], fac = coagulation[, 2], n = 10000)
 coag2 <- hanova1(resp = coagulation[, 1], fac = coagulation[, 2], n = 10000,
                  param = "original", r = 1)
-plot(coag1)
+plot(coag1, params = "ru")
+plot(coag1, ru_scale = TRUE)
 ```
 
-The heaviness of the upper tail of the marginal posterior density of $\sigma_\alpha$ is evident in the plot.
+The heaviness of the upper tail of the marginal posterior density of $\sigma_\alpha$ is evident in the plot on the left.  Parameter transformation to $(\rho_1, \rho_2)=(\log\sigma_\alpha, \log\sigma)$ results in a density (in the plot on the right) from which it is easier to simulate.
 
 We produce some summaries of the posterior sample stored in `coag1`.  The summaries calculated from `coag2` are very similar.
 
