--- a/vignettes/bang.bib
+++ b/vignettes/bang.bib
@@ -139,3 +139,17 @@ url="https://doi.org/10.1175/JCLI-D-14-00265.1"
     url = {https://doi.org/10.1214/06-BA117A},
     note=""
     }
+
+@article{Tarone1982,
+ ISSN = {0006341X, 15410420},
+ URL = {http://www.jstor.org/stable/2530304},
+ abstract = {A method is developed for utilizing historical control information in testing for a trend in proportions. The resulting test statistic is a modification of the statistic proposed by Cochran (1954, Biometrics 10, 417-451) and by Armitage (1955, Biometrics 11, 375-386). The contribution of the historical data in the analysis depends upon the degree of heterogeneity of the historical rates.},
+ author = {Robert E. Tarone},
+ journal = {Biometrics},
+ number = {1},
+ pages = {215-220},
+ publisher = {[Wiley, International Biometric Society]},
+ title = {The Use of Historical Control Information in Testing for a Trend in Proportions},
+ volume = {38},
+ year = {1982}
+}
