--- a/vignettes/bang-hef-vignette.Rmd
+++ b/vignettes/bang-hef-vignette.Rmd
@@ -22,14 +22,14 @@ Suppose that, for $j = 1, \ldots, J$, experiment $j$ of $J$ experiments yields a
 
 ## Beta-binomial model
 
-We consider the example presented in Section 5.3 of @BDA2014, in which the data [@Tarone1982] in the matrix `rat` are analysed.  These data contain information about an experiment in which, for each of 71 groups of rats, the total number of rats in the group and the numbers of rats who develop a tumor is recorded.  Conditional on $\boldsymbol{\mathbf{\theta}} = (\theta_1, \ldots, \theta_J) = (p_1, \ldots, p_J)$ we assume independent binomial distributions for $(Y_1, \ldots, Y_j)$, that is, $Y_j \sim {\rm binomial}(n_j, p_j)$.  We use the conditionally conjugate priors $p_j \sim {\rm Beta}(\alpha, \beta)$, so that $\psi = (\alpha, \beta)$.
+We consider the example presented in Section 5.3 of @BDA2014, in which the data [@Tarone1982] in the matrix `rat` are analysed.  These data contain information about an experiment in which, for each of 71 groups of rats, the total number of rats in the group and the numbers of rats who develop a tumor is recorded, so that $J = 71$. Conditional on $\boldsymbol{\mathbf{\theta}} = (\theta_1, \ldots, \theta_J) = (p_1, \ldots, p_J)$ we assume independent binomial distributions for $(Y_1, \ldots, Y_J)$, that is, $Y_j \sim {\rm binomial}(n_j, p_j)$.  We use the conditionally conjugate priors $p_j \sim {\rm Beta}(\alpha, \beta)$, so that $\psi = (\alpha, \beta)$.
 
 The conditional conjagacy of the priors means that the marginal posterior of $(\alpha, \beta)$ given $\boldsymbol{\mathbf{y}} = (y_1, \ldots, y_J)$ can be determined as 
 \[ \pi(\alpha, \beta \mid \boldsymbol{\mathbf{y}}) \propto \pi(\alpha, \beta) 
 \prod_{j=1}^J \frac{B(y_j + \alpha, n_j - y_j + \beta)}{B(\alpha, \beta)}, \]
 where $\pi(\alpha, \beta)$ is the hyperprior density for $(\alpha, \beta)$. See equation (5.8) @BDA2014.
 To simulate from the full posterior $\pi(\boldsymbol{\mathbf{\theta}}, \alpha, \beta \mid \boldsymbol{\mathbf{y}}) = \pi(\boldsymbol{\mathbf{\theta}} \mid \alpha, \beta, \boldsymbol{\mathbf{y}}) \pi(\alpha, \beta \mid \boldsymbol{\mathbf{y}})$ we first sample from $\pi(\alpha, \beta \mid \boldsymbol{\mathbf{y}})$.  Simulation from the conditional posterior distribution of $\boldsymbol{\mathbf{\theta}}$ given $(\alpha, \beta, \boldsymbol{\mathbf{y}})$ is straightforward on noting that 
-\[ \theta_j \mid \alpha, \beta, y_j \sim {\rm Beta}(y_j + \alpha, n_j - y_j + \beta) \]
+\[ \theta_j \mid \alpha, \beta, y_j \sim {\rm beta}(y_j + \alpha, n_j - y_j + \beta) \]
 and that $\theta_j, j = 1, \ldots, J$ are conditionally independent.
 
 The function `hef` simulates from the full posterior performing simulation from $\pi(\alpha, \beta \mid \boldsymbol{\mathbf{y}})$ using the generalized ratio-of-uniforms method (specifically, the function `ru` in the *rust* package [@rust]).  By default a model-specific transformation of the parameter vector $\psi = (\alpha, \beta)$ is used to improve efficiency.  See the documentation of `hef` for details.
@@ -51,6 +51,32 @@ summary(rat_res)
 ```
 
 ## Gamma-Poisson Model
+
+We perform a fully Bayesian analysis of an empirical Bayesian example presented in Section 4.2 of @GS1990, in which the hyperparameter $\alpha$ described below is fixed at a point estimate derived from the data.  The `pump` dataset [@GoM1987] is a matrix in which each row gives information about one of 10 different pump systems.  The first column contains the number of pump failures.  The second column contains the length of operating time, in thousands of hours.
+
+```{r}
+pump
+```
+
+The general setup is similar to the beta-binomial model described above but now the response distribution is Poisson, the prior distribution is gamma and $J = 10$.  For $j = 1, \ldots, J$ let $Y_j$ denote the number of failures and $e_j$ the length of operating time for pump system $j$.  We assume that $Y_j \sim {\rm {Poisson}(e_j \lambda_j)}$  Conditional on $\boldsymbol{\mathbf{\lambda}} = (\lambda_1, \ldots, \lambda_J) = (\lambda_1, \ldots, \lambda_J)$ we assume independent Poisson distributions for $(Y_1, \ldots, Y_J)$, that is, $Y_j \sim {\rm Poisson}(e_j \lambda_j)$.  We use the conditionally conjugate priors $\lambda_j \sim {\rm gamma}(\alpha, \beta)$, so that $\psi = (\alpha, \beta)$.  We use the parameterisation where $\beta$ is a rate parameter, so that ${\rm E}(\lambda_j) = \alpha/\beta$ *a priori*.
+
+The marginal posterior of $(\alpha, \beta)$ given $\boldsymbol{\mathbf{y}} = (y_1, \ldots, y_J)$ can be determined as 
+\[ \pi(\alpha, \beta \mid \boldsymbol{\mathbf{y}}) \propto \pi(\alpha, \beta) 
+\prod_{j=1}^J \frac{\beta^\alpha\Gamma(\alpha + y_j)}{(\beta+e_j)^{\alpha+y_j} \Gamma(\alpha+y_j)}, 
+\]
+where $\pi(\alpha, \beta)$ is the hyperprior density for $(\alpha, \beta)$.
+
+To simulate from the full posterior $\pi(\boldsymbol{\mathbf{\lambda}}, \alpha, \beta \mid \boldsymbol{\mathbf{y}}) = \pi(\boldsymbol{\mathbf{\lambda}} \mid \alpha, \beta, \boldsymbol{\mathbf{y}}) \pi(\alpha, \beta \mid \boldsymbol{\mathbf{y}})$ we first sample from $\pi(\alpha, \beta \mid \boldsymbol{\mathbf{y}})$ and then note that \[ \lambda_j \mid \alpha, \beta, y_j \sim {\rm gamma}(y_j + \alpha, e_j + \beta) \]
+and that $\lambda_j, j = 1, \ldots, J$ are conditionally independent.
+
+We produce similar output to the beta-binomial example above.  Now the scale used for sampling is $(\rho_1, \rho_2)=(\log (\alpha/\beta), \log \beta))$.
+
+```{r, fig.show='hold', fig.width = 3.45, fig.height = 3.45}
+pump_res <- hef(model = "gamma_pois", data = pump)
+plot(pump_res)
+plot(pump_res, ru_scale = TRUE)
+summary(pump_res)
+```
 
 ## References
 
