--- a/vignettes/bang.bib
+++ b/vignettes/bang.bib
@@ -153,3 +153,32 @@ url="https://doi.org/10.1175/JCLI-D-14-00265.1"
  volume = {38},
  year = {1982}
 }
+
+@article{GS1990,
+ ISSN = {01621459},
+ URL = {http://www.jstor.org/stable/2289776},
+ abstract = {Stochastic substitution, the Gibbs sampler, and the sampling-importance-resampling algorithm can be viewed as three alternative sampling- (or Monte Carlo-) based approaches to the calculation of numerical estimates of marginal probability distributions. The three approaches will be reviewed, compared, and contrasted in relation to various joint probability structures frequently encountered in applications. In particular, the relevance of the approaches to calculating Bayesian posterior densities for a variety of structured models will be discussed and illustrated.},
+ author = {Alan E. Gelfand and Adrian F. M. Smith},
+ journal = {Journal of the American Statistical Association},
+ number = {410},
+ pages = {398-409},
+ publisher = {[American Statistical Association, Taylor & Francis, Ltd.]},
+ title = {Sampling-Based Approaches to Calculating Marginal Densities},
+ volume = {85},
+ year = {1990}
+}
+
+@article{GoM1987,
+ ISSN = {00401706},
+ URL = {http://www.jstor.org/stable/1269878},
+ abstract = {A collection of I similar items generates point event histories; for example, machines experience failures or operators make mistakes. Suppose the intervals between events are modeled as iid exponential (λ <sub>i</sub>), or the counts as Poisson (λ <sub>i</sub>t<sub>i</sub>), for the ith item. Furthermore, so as to represent between-item variability, each individual rate parameter λ <sub>i</sub>, is presumed drawn from a fixed (super) population with density g<sub>λ</sub>(·;θ), θ being a vector parameter: a parametric empirical Bayes (PEB) setup. For g<sub>λ</sub>, specified alternatively as long-Student t(n) or gamma, we exhibit the results of numerical procedures for estimating superpopulation parameters θ and for describing pooled estimates of the individual rates λ <sub>i</sub>, obtained via Bayes's formula. Three data sets are analyzed, and convenient explicit approximate formulas are furnished for λ <sub>i</sub> estimates. In the Student-t case, the individual estimates are seen to have a robust quality.},
+ author = {Donald P. Gaver and I. G. O'Muircheartaigh},
+ journal = {Technometrics},
+ number = {1},
+ pages = {1-15},
+ publisher = {[Taylor & Francis, Ltd., American Statistical Association, American Society for Quality]},
+ title = {Robust Empirical Bayes Analyses of Event Rates},
+ volume = {29},
+ year = {1987}
+}
+
