--- a/README.Rmd
+++ b/README.Rmd
@@ -12,6 +12,10 @@ knitr::opts_chunk$set(
 )
 ```
 
+[![Travis-CI Build Status](https://travis-ci.org/paulnorthrop/bang.svg?branch=master)](https://travis-ci.org/paulnorthrop/bang) 
+[![AppVeyor Build Status](https://ci.appveyor.com/api/projects/status/github/paulnorthrop/bang?branch=master&svg=true)](https://ci.appveyor.com/project/paulnorthrop/bang)
+[![Coverage Status](https://codecov.io/github/paulnorthrop/bang/coverage.svg?branch=master)](https://codecov.io/github/paulnorthrop/bang?branch=master)
+
 ### Bayesian Analysis, No Gibbs
 
 ### What does bang do?
@@ -34,7 +38,6 @@ To install this development version from Github use:
 
 ```{r installation, eval = FALSE}
 install.packages("devtools")
-library(devtools)
 devtools::install_github("paulnorthrop/bang")
 ```
 
