--- a/vignettes/bang-anova-vignette.Rmd
+++ b/vignettes/bang-anova-vignette.Rmd
@@ -70,7 +70,7 @@ lines(density(res26_2$sim_vals[, "mu"]))
 
 ## Coagulation time data
 
-In the temperature projection example sampling was conducted on the scale $(\log\sigma_\alpha, \log\alpha)$ and was unproblematic.  It would also have been unproblematic had we sampled on the original $(\sigma_\alpha, \sigma)$ scale.  To show that there are examples where the latter is not the case we consider a small dataset presented in Section 11.6 of @BDA2014.  The response variable is the coagulation time of blood drawn from 24 animals allocated to different diets.  The crucial aspect of this dataset is that the explanatory factor (diet) has only 4 levels.  This means that there is little information about $\sigma_\alpha$ in the data.  Unless strong prior information about $\sigma_\alpha$ is provided the posterior distribution for $\sigma_\alpha$ will tend to have a heavy upper tail [@Gelman2006].  
+In the temperature projection example sampling was conducted on the scale $(\log\sigma_\alpha, \log\alpha)$ and was unproblematic.  It would also have been unproblematic had we sampled on the original $(\sigma_\alpha, \sigma)$ scale.  To show that there are examples where the latter is not the case we consider a small dataset presented in Section 11.6 of @BDA2014.  The response variable is the coagulation time of blood drawn from 24 animals allocated to different diets.  The crucial aspect of this dataset is that the explanatory factor (diet) has only 4 levels.  This means that there is little information about $\sigma_\alpha$ in the data.  Unless some prior information about $\sigma_\alpha$ is provided the posterior distribution for $\sigma_\alpha$ will tend to have a heavy upper tail [@Gelman2006].  
 
 The generalized ratio-of-uniforms method used by *rust* can fail for heavy-tailed densities and this is indeed the case for these data if we try to sample directly from $\pi(\sigma_\alpha, \sigma \mid \boldsymbol{\mathbf{y}})$.  One solution is to reparameterize to $(\log\sigma_\alpha, \log\sigma)$, which `hanova1` implements by default.  Another possibility is to increase the generalized ratio-of-uniforms tuning parameter `r` from the default value of 1/2 used in *rust*.  These approaches are illustrated below.
 
@@ -93,6 +93,19 @@ round(t(apply(all1, 2, quantile, probs = probs)), 1)
 ```
 
 These posterior summaries are similar to those presented in Table 11.3 of @BDA2014 (where $\sigma_\alpha$ is denoted $\tau$), which were obtained using Gibbs sampling. 
+
+When the number of groups is small @Gelman2006 advocates the use of a half-Cauchy prior for $\sigma_\alpha$.  The code below implements this using independent half-Cauchy priors for $\sigma_\alpha$ and $\sigma$, that is,
+\[ 
+\pi(\sigma_\alpha, \sigma) \propto 
+\left(1 + \frac{\sigma_\alpha^2}{A_\alpha^2}\right)^{-1}
+\left(1 + \frac{\sigma^2}{A^2}\right)^{-1}, \quad \sigma_\alpha>0, \, \sigma>0.
+\]
+We choose, somewhat arbitrarily, $\sigma_\alpha = 10$: in practice $\sigma_\alpha$ should be set by considering the problem in hand.  See @Gelman2006 for details. We set $A$ to be large enough to result in an effectively flat prior for $\sigma$.
+
+```{r}
+coag3 <- hanova1(resp = coagulation[, 1], fac = coagulation[, 2],
+                 param = "original", prior = "cauchy", hpars = c(10, 1e6))
+```
 
 ## Appendix {#appendix}
 
