--- a/vignettes/bang-hef-vignette.Rmd
+++ b/vignettes/bang-hef-vignette.Rmd
@@ -26,10 +26,10 @@ We consider the example presented in Section 5.3 of @BDA2014, in which the data 
 
 The conditional conjagacy of the priors means that the marginal posterior of $(\alpha, \beta)$ given $\boldsymbol{\mathbf{y}} = (y_1, \ldots, y_J)$ can be determined as 
 \[ \pi(\alpha, \beta \mid \boldsymbol{\mathbf{y}}) \propto \pi(\alpha, \beta) 
-\prod_{j=1}^J \frac{B(y_j + \alpha, n_j - y_j + \beta)}{B(\alpha, \beta)}, \]
+\prod_{j=1}^J \frac{B(\alpha + y_j, \beta + n_j - y_j)}{B(\alpha, \beta)}, \]
 where $\pi(\alpha, \beta)$ is the hyperprior density for $(\alpha, \beta)$. See equation (5.8) @BDA2014.
 To simulate from the full posterior $\pi(\boldsymbol{\mathbf{\theta}}, \alpha, \beta \mid \boldsymbol{\mathbf{y}}) = \pi(\boldsymbol{\mathbf{\theta}} \mid \alpha, \beta, \boldsymbol{\mathbf{y}}) \pi(\alpha, \beta \mid \boldsymbol{\mathbf{y}})$ we first sample from $\pi(\alpha, \beta \mid \boldsymbol{\mathbf{y}})$.  Simulation from the conditional posterior distribution of $\boldsymbol{\mathbf{\theta}}$ given $(\alpha, \beta, \boldsymbol{\mathbf{y}})$ is straightforward on noting that 
-\[ \theta_j \mid \alpha, \beta, y_j \sim {\rm beta}(y_j + \alpha, n_j - y_j + \beta) \]
+\[ \theta_j \mid \alpha, \beta, y_j \sim {\rm beta}(\alpha + y_j, \beta + n_j - y_j) \]
 and that $\theta_j, j = 1, \ldots, J$ are conditionally independent.
 
 The function `hef` simulates from the full posterior performing simulation from $\pi(\alpha, \beta \mid \boldsymbol{\mathbf{y}})$ using the generalized ratio-of-uniforms method (specifically, the function `ru` in the *rust* package [@rust]).  By default a model-specific transformation of the parameter vector $\psi = (\alpha, \beta)$ is used to improve efficiency.  See the documentation of `hef` for details.
@@ -62,11 +62,11 @@ The general setup is similar to the beta-binomial model described above but now 
 
 The marginal posterior of $(\alpha, \beta)$ given $\boldsymbol{\mathbf{y}} = (y_1, \ldots, y_J)$ can be determined as 
 \[ \pi(\alpha, \beta \mid \boldsymbol{\mathbf{y}}) \propto \pi(\alpha, \beta) 
-\prod_{j=1}^J \frac{\beta^\alpha\Gamma(\alpha + y_j)}{(\beta+e_j)^{\alpha+y_j} \Gamma(\alpha+y_j)}, 
+\prod_{j=1}^J \frac{\beta^\alpha\Gamma(\alpha + y_j)}{(\beta+e_j)^{\alpha+y_j} \Gamma(\alpha)}, 
 \]
 where $\pi(\alpha, \beta)$ is the hyperprior density for $(\alpha, \beta)$.
 
-To simulate from the full posterior $\pi(\boldsymbol{\mathbf{\lambda}}, \alpha, \beta \mid \boldsymbol{\mathbf{y}}) = \pi(\boldsymbol{\mathbf{\lambda}} \mid \alpha, \beta, \boldsymbol{\mathbf{y}}) \pi(\alpha, \beta \mid \boldsymbol{\mathbf{y}})$ we first sample from $\pi(\alpha, \beta \mid \boldsymbol{\mathbf{y}})$ and then note that \[ \lambda_j \mid \alpha, \beta, y_j \sim {\rm gamma}(y_j + \alpha, e_j + \beta) \]
+To simulate from the full posterior $\pi(\boldsymbol{\mathbf{\lambda}}, \alpha, \beta \mid \boldsymbol{\mathbf{y}}) = \pi(\boldsymbol{\mathbf{\lambda}} \mid \alpha, \beta, \boldsymbol{\mathbf{y}}) \pi(\alpha, \beta \mid \boldsymbol{\mathbf{y}})$ we first sample from $\pi(\alpha, \beta \mid \boldsymbol{\mathbf{y}})$ and then note that \[ \lambda_j \mid \alpha, \beta, y_j \sim {\rm gamma}(\alpha + y_j, \beta + e_j) \]
 and that $\lambda_j, j = 1, \ldots, J$ are conditionally independent.
 
 We produce similar output to the beta-binomial example above.  Now the scale used for sampling is $(\rho_1, \rho_2)=(\log (\alpha/\beta), \log \beta))$.
