--- a/vignettes/bang-anova-vignette.Rmd
+++ b/vignettes/bang-anova-vignette.Rmd
@@ -14,19 +14,21 @@ bibliography: bang.bib
 
 ```{r, include = FALSE}
 knitr::opts_chunk$set(comment = "#>", collapse = TRUE)
+set.seed(47)
 ```
 
-The *bang* package simulates from the posterior distributions involved in certain Bayesian models.  See the vignette [Introducing bang: Bayesian Analysis, No Gibbs](bang-vignette.html) for more information.  In this vignette we consider the hierarchical 1-way Analysis of variance (ANOVA) model:
+The *bang* package simulates from the posterior distributions involved in certain Bayesian models.  See the vignette [Introducing bang: Bayesian Analysis, No Gibbs](bang-vignette.html) for an introduction.  In this vignette we consider the hierarchical 1-way Analysis of variance (ANOVA) model:
 \begin{equation*}
 Y_{ij} = \mu + \alpha_i + \epsilon_{ij} = \theta_i + \epsilon_{ij}, \quad\mbox{for} \,\, i = 1, \ldots, I, \, j = 1, \ldots, n_i, 
 \end{equation*}
 where  $\alpha_i \sim N(0, \sigma_\alpha^2)$, so that $\theta_i = \mu + \alpha_i \sim N(\mu, \sigma_\alpha^2)$, and $\epsilon_{ij} \sim N(0, \sigma^2)$ and all random variables are independent.  Variability of the response variable $Y$ about an overall level $\mu$ is decomposed into contributions $\alpha_i, i = 1, \ldots, I$ from an explanatory factor indicating membership of group $i$ and a random error term $\epsilon_{ij}$.
 
-This model has $I + 3$ parameters: $\boldsymbol{\mathbf{\phi}} = (\mu, \sigma_\alpha, \sigma)$ and $\boldsymbol{\mathbf{\alpha}} = (\alpha_1, \ldots, \alpha_I)$.  Equivalently, we could replace $\boldsymbol{\mathbf{\alpha}}$ by $\boldsymbol{\mathbf{\theta}} = (\theta_1, \ldots, \theta_I)$.  The [Appendix](#appendix) shows that the full posterior $\pi(\boldsymbol{\mathbf{\alpha}},\boldsymbol{\mathbf{\phi}} \mid \boldsymbol{\mathbf{y}})$ can be factorised into products of lower-dimensional densities.  If it is assumed that $\mu$ and $(\sigma_\alpha, \sigma)$ are independent *a priori* and a normal prior is set for $\mu$ then the only challenging part of sampling from $\pi(\boldsymbol{\mathbf{\alpha}},\boldsymbol{\mathbf{\phi}} \mid \boldsymbol{\mathbf{y}})$ is to simulate from the two-dimensional density $\pi(\sigma_\alpha, \sigma \mid \boldsymbol{\mathbf{y}})$.  Otherwise, we need to simulate from $\pi(\mu, \sigma_\alpha, \sigma \mid \boldsymbol{\mathbf{y}})$.  The *bang* function `hanova1` uses the *rust* package [@rust] to simulate from these densities.  In sampling from the marginal posterior density $\pi(\phi \mid \boldsymbol{\mathbf{y}})$ we use a parameterisation designed to improve the efficiency of sampling.  In this case we work with $(\log\sigma_\alpha, \log\sigma)$.  We illustrate the use of `hanova1` using two example datasets.
+This model has $I + 3$ parameters: $\boldsymbol{\mathbf{\phi}} = (\mu, \sigma_\alpha, \sigma)$ and $\boldsymbol{\mathbf{\alpha}} = (\alpha_1, \ldots, \alpha_I)$.  Equivalently, we could replace $\boldsymbol{\mathbf{\alpha}}$ by $\boldsymbol{\mathbf{\theta}} = (\theta_1, \ldots, \theta_I)$.  The [Appendix](#appendix) shows that the full posterior $\pi(\boldsymbol{\mathbf{\alpha}},\boldsymbol{\mathbf{\phi}} \mid \boldsymbol{\mathbf{y}}) = \pi(\boldsymbol{\mathbf{\alpha}} \mid \boldsymbol{\mathbf{\phi}}, \boldsymbol{\mathbf{y}}) \, \pi(\boldsymbol{\mathbf{\phi}} \mid \boldsymbol{\mathbf{y}})$ can be factorized into products of lower-dimensional densities.  If it is assumed that $\mu$ and $(\sigma_\alpha, \sigma)$ are independent *a priori* and a normal prior is set for $\mu$ then the only challenging part of sampling from $\pi(\boldsymbol{\mathbf{\alpha}},\boldsymbol{\mathbf{\phi}} \mid \boldsymbol{\mathbf{y}})$ is to simulate from the two-dimensional density $\pi(\sigma_\alpha, \sigma \mid \boldsymbol{\mathbf{y}})$.  Otherwise, we need to simulate from $\pi(\mu, \sigma_\alpha, \sigma \mid \boldsymbol{\mathbf{y}})$.  The *bang* function `hanova1` uses the *rust* package [@rust] to simulate from these densities.  In sampling from the marginal posterior density $\pi(\phi \mid \boldsymbol{\mathbf{y}})$ we use a parameterization designed to improve the efficiency of sampling.  In this case we work with $(\log\sigma_\alpha, \log\sigma)$. 
+We illustrate the use of `hanova1` using two example datasets.  Unless stated otherwise we use the default hyperprior $\pi(\mu, \sigma_\alpha, \sigma) \propto 1/\sigma$, that is, a uniform prior for $(\mu, \sigma_\alpha, \log\sigma)$ for $\sigma_\alpha>0, \sigma>0$ (see Sections 5.7 and 11.6 of @BDA2014).  A user-defined prior can be set using `set_user_prior`.
 
 ## Late 21st Century Global Temperature Projection Data
 
-The dataframe `temp2` contains indices of global temperature change from late 20th century (1970-1999) to late 21st century (2069-2098) based on data produced by the Fifth Coupled Model Intercomparison Project (CMIP5).  The dataset is the union of four subsets, each based on a different greenhouse gas emissions scenario called a   Representative Concentration Pathway (RCP). Here we analyse only data for RCP2.6.  Of course, inferences about the overall temperature change parameter $\mu$ are important, but it is also interesting to compare the magnitudes of $\sigma_\alpha$ and $\sigma$.  If, for example, if $\sigma_\alpha$ is much greater than $\sigma$ then uncertainty about temperature projection associated with choice of GCM is greater than that associated with the choice of simulation run from a particular GCM. See @NC2014 for more information.
+The data frame `temp2` contains indices of global temperature change from late 20th century (1970-1999) to late 21st century (2069-2098) based on data produced by the Fifth Coupled Model Intercomparison Project (CMIP5).  The dataset is the union of four subsets, each based on a different greenhouse gas emissions scenario called a   Representative Concentration Pathway (RCP). Here we analyse only data for RCP2.6.  Of course, inferences about the overall temperature change parameter $\mu$ are important, but it is also interesting to compare the magnitudes of $\sigma_\alpha$ and $\sigma$.  If, for example, if $\sigma_\alpha$ is much greater than $\sigma$ then uncertainty about temperature projection associated with choice of GCM is greater than that associated with the choice of simulation run from a particular GCM. See @NC2014 for more information.
 
 ```{r, include = FALSE}
 set.seed(7052009)
@@ -61,7 +63,7 @@ plot(res26_2, ru_scale = TRUE)
 
 The plot on the left shows the values sampled from the posterior distribution of $(\sigma_\alpha, \sigma)$ with superimposed density contours.  We see that the posterior distribution is located at values for which $\sigma_\alpha$ is much greater than $\sigma$, by a factor of nearly 10.  On the right is a similar plot displayed on the scale used for sampling, $(\rho_1, \rho_2)=(\log \sigma_\alpha, \log \sigma)$, after relocation of the posterior mode to the origin and rotation and scaling to near circularity of the density contours.
 
-We summarise the marginal posterior distribution of $\mu$ using a histogram with a superimposed kernel density estimate.
+We summarize the marginal posterior distribution of $\mu$ using a histogram with a superimposed kernel density estimate.
 
 ```{r, fig.width = 5, fig.align='center'}
 hist(res26_2$sim_vals[, "mu"],  main = "", xlab = expression(mu), prob = TRUE)
@@ -70,9 +72,9 @@ lines(density(res26_2$sim_vals[, "mu"]))
 
 ## Coagulation time data
 
-In the temperature projection example sampling was conducted on the scale $(\log\sigma_\alpha, \log\alpha)$ and was unproblematic.  It would also have been unproblematic had we sampled on the original $(\sigma_\alpha, \sigma)$ scale.  To show that there are examples where the latter is not the case we consider a small dataset presented in Section 11.6 of @BDA2014.  The response variable is the coagulation time of blood drawn from 24 animals allocated to different diets.  The crucial aspect of this dataset is that the explanatory factor (diet) has only 4 levels.  This means that there is little information about $\sigma_\alpha$ in the data.  Unless some prior information about $\sigma_\alpha$ is provided the posterior distribution for $\sigma_\alpha$ will tend to have a heavy upper tail [@Gelman2006].  
+In the temperature projection example sampling was conducted on the scale $(\log\sigma_\alpha, \log\alpha)$ and was unproblematic.  It would also have been unproblematic had we sampled on the original $(\sigma_\alpha, \sigma)$ scale.  To show that there are examples where the latter is not the case we consider a small dataset presented in Section 11.6 of @BDA2014.  The response variable is the coagulation time of blood drawn from 24 animals allocated to different diets.  The crucial aspect of this dataset is that the explanatory factor (diet) has only 4 levels.  This means that there is little information about $\sigma_\alpha$ in the data.  Unless some prior information about $\sigma_\alpha$ is provided the posterior distribution for $\sigma_\alpha$ will tend to have a heavy upper tail [@Gelman2006]. 
 
-The generalized ratio-of-uniforms method used by *rust* can fail for heavy-tailed densities and this is indeed the case for these data if we try to sample directly from $\pi(\sigma_\alpha, \sigma \mid \boldsymbol{\mathbf{y}})$.  One solution is to reparameterize to $(\log\sigma_\alpha, \log\sigma)$, which `hanova1` implements by default.  Another possibility is to increase the generalized ratio-of-uniforms tuning parameter `r` from the default value of 1/2 used in *rust*.  These approaches are illustrated below.
+The generalized ratio-of-uniforms method used by *rust* can fail for heavy-tailed densities and this is indeed the case for these data if we try to sample directly from $\pi(\sigma_\alpha, \sigma \mid \boldsymbol{\mathbf{y}})$ using the *rust* package's default settings for the generalized ratio-of-uniforms algorithm.  One solution is to reparameterize to $(\log\sigma_\alpha, \log\sigma)$, which `hanova1` implements by default.  Another possibility is to increase the generalized ratio-of-uniforms tuning parameter `r` from the default value of 1/2 used in *rust*.  These approaches are illustrated below.
 
 ```{r, fig.show='hold', fig.width = 3.45, fig.height = 3.45}
 coag1 <- hanova1(resp = coagulation[, 1], fac = coagulation[, 2], n = 10000)
