--- a/vignettes/bang.bib
+++ b/vignettes/bang.bib
@@ -23,10 +23,10 @@ url="http://dx.doi.org/10.1007/BF01889987"
 }
 
   @Manual{bayesplot,
-    title = {{b}ayesplot: Plotting for Bayesian Models},
-    author = {Jonah Gabry},
-    year = {2016},
-    note = {R package version 1.1.0},
+    title = {bayesplot: Plotting for Bayesian Models},
+    author = {Jonah Gabry and Tristan Mahr},
+    year = {2017},
+    note = {R package version 1.4.0},
     url = {https://CRAN.R-project.org/package=bayesplot},
   }
 
@@ -42,7 +42,7 @@ url="http://dx.doi.org/10.1007/BF01889987"
 
   @Book{ggplot2,
     author = {Hadley Wickham},
-    title = {ggplot2: Elegant Graphics for Data Analysis},
+    title = {{g}gplot2: Elegant Graphics for Data Analysis},
     publisher = {Springer-Verlag New York},
     year = {2009},
     isbn = {978-0-387-98140-6},
