--- a/vignettes/bang-anova-vignette.Rmd
+++ b/vignettes/bang-anova-vignette.Rmd
@@ -23,7 +23,7 @@ Y_{ij} = \mu + \alpha_i + \epsilon_{ij} = \theta_i + \epsilon_{ij}, \quad\mbox{f
 \end{equation*}
 where  $\alpha_i \sim N(0, \sigma_\alpha^2)$, so that $\theta_i = \mu + \alpha_i \sim N(\mu, \sigma_\alpha^2)$, and $\epsilon_{ij} \sim N(0, \sigma^2)$ and all random variables are independent.  Variability of the response variable $Y$ about an overall level $\mu$ is decomposed into contributions $\alpha_i, i = 1, \ldots, I$ from an explanatory factor indicating membership of group $i$ and a random error term $\epsilon_{ij}$.
 
-This model has $I + 3$ parameters: $\boldsymbol{\mathbf{\phi}} = (\mu, \sigma_\alpha, \sigma)$ and $\boldsymbol{\mathbf{\alpha}} = (\alpha_1, \ldots, \alpha_I)$.  Equivalently, we could replace $\boldsymbol{\mathbf{\alpha}}$ by $\boldsymbol{\mathbf{\theta}} = (\theta_1, \ldots, \theta_I)$.  The [Appendix](#appendix) shows that the full posterior $\pi(\boldsymbol{\mathbf{\alpha}},\boldsymbol{\mathbf{\phi}} \mid \boldsymbol{\mathbf{y}}) = \pi(\boldsymbol{\mathbf{\alpha}} \mid \boldsymbol{\mathbf{\phi}}, \boldsymbol{\mathbf{y}}) \, \pi(\boldsymbol{\mathbf{\phi}} \mid \boldsymbol{\mathbf{y}})$ can be factorized into products of lower-dimensional densities.  If it is assumed that $\mu$ and $(\sigma_\alpha, \sigma)$ are independent *a priori* and a normal prior is set for $\mu$ then the only challenging part of sampling from $\pi(\boldsymbol{\mathbf{\alpha}},\boldsymbol{\mathbf{\phi}} \mid \boldsymbol{\mathbf{y}})$ is to simulate from the two-dimensional density $\pi(\sigma_\alpha, \sigma \mid \boldsymbol{\mathbf{y}})$.  Otherwise, we need to simulate from $\pi(\mu, \sigma_\alpha, \sigma \mid \boldsymbol{\mathbf{y}})$.  The *bang* function `hanova1` uses the *rust* package [@rust] to simulate from these densities.  In sampling from the marginal posterior density $\pi(\phi \mid \boldsymbol{\mathbf{y}})$ we use a parameterization designed to improve the efficiency of sampling.  In this case we work with $(\log\sigma_\alpha, \log\sigma)$. 
+This model has $I + 3$ parameters: $\boldsymbol{\mathbf{\phi}} = (\mu, \sigma_\alpha, \sigma)$ and $\boldsymbol{\mathbf{\alpha}} = (\alpha_1, \ldots, \alpha_I)$.  Equivalently, we could replace $\boldsymbol{\mathbf{\alpha}}$ by $\boldsymbol{\mathbf{\theta}} = (\theta_1, \ldots, \theta_I)$.  The full posterior $\pi(\boldsymbol{\mathbf{\alpha}},\boldsymbol{\mathbf{\phi}} \mid \boldsymbol{\mathbf{y}}) = \pi(\boldsymbol{\mathbf{\alpha}} \mid \boldsymbol{\mathbf{\phi}}, \boldsymbol{\mathbf{y}}) \, \pi(\boldsymbol{\mathbf{\phi}} \mid \boldsymbol{\mathbf{y}})$ can be factorized into products of lower-dimensional densities.  See the [Appendix](#appendix) for details.  If it is assumed that $\mu$ and $(\sigma_\alpha, \sigma)$ are independent *a priori* and a normal prior is set for $\mu$ then the only challenging part of sampling from $\pi(\boldsymbol{\mathbf{\alpha}},\boldsymbol{\mathbf{\phi}} \mid \boldsymbol{\mathbf{y}})$ is to simulate from the two-dimensional density $\pi(\sigma_\alpha, \sigma \mid \boldsymbol{\mathbf{y}})$.  Otherwise, we need to simulate from $\pi(\mu, \sigma_\alpha, \sigma \mid \boldsymbol{\mathbf{y}})$.  The *bang* function `hanova1` uses the *rust* package [@rust] to simulate from these densities.  In sampling from the marginal posterior density $\pi(\phi \mid \boldsymbol{\mathbf{y}})$ we use a parameterization designed to improve the efficiency of sampling.  In this case we work with $(\log\sigma_\alpha, \log\sigma)$. 
 We illustrate the use of `hanova1` using two example datasets.  Unless stated otherwise we use the default hyperprior $\pi(\mu, \sigma_\alpha, \sigma) \propto 1/\sigma$, that is, a uniform prior for $(\mu, \sigma_\alpha, \log\sigma)$ for $\sigma_\alpha>0, \sigma>0$ (see Sections 5.7 and 11.6 of @BDA2014).  A user-defined prior can be set using `set_user_prior`.
 
 ## Late 21st Century Global Temperature Projection Data
@@ -68,6 +68,11 @@ We summarize the marginal posterior distribution of $\mu$ using a histogram with
 ```{r, fig.width = 5, fig.align='center'}
 hist(temp_res$sim_vals[, "mu"],  main = "", xlab = expression(mu), prob = TRUE)
 lines(density(temp_res$sim_vals[, "mu"]))
+```
+
+The following plot summarizes the estimated marginal posterior densities of the mean index for each GCM.
+```{r}
+plot(temp_res, params = "pop", which_pop = "all", one_plot = TRUE)
 ```
 
 ## Coagulation time data
