Use doi numbers

--- a/vignettes/bang.bib
+++ b/vignettes/bang.bib
@@ -142,7 +142,7 @@ url="https://doi.org/10.1175/JCLI-D-14-00265.1"
 
 @article{Tarone1982,
  ISSN = {0006341X, 15410420},
- URL = {https://www.jstor.org/stable/2530304},
+ doi = {10.2307/1269878},
  abstract = {A method is developed for utilizing historical control information in testing for a trend in proportions. The resulting test statistic is a modification of the statistic proposed by Cochran (1954, Biometrics 10, 417-451) and by Armitage (1955, Biometrics 11, 375-386). The contribution of the historical data in the analysis depends upon the degree of heterogeneity of the historical rates.},
  author = {Robert E. Tarone},
  journal = {Biometrics},
@@ -156,7 +156,7 @@ url="https://doi.org/10.1175/JCLI-D-14-00265.1"
 
 @article{GS1990,
  ISSN = {01621459},
- URL = {https://www.jstor.org/stable/2289776},
+ doi = {10.2307/2289776},
  abstract = {Stochastic substitution, the Gibbs sampler, and the sampling-importance-resampling algorithm can be viewed as three alternative sampling- (or Monte Carlo-) based approaches to the calculation of numerical estimates of marginal probability distributions. The three approaches will be reviewed, compared, and contrasted in relation to various joint probability structures frequently encountered in applications. In particular, the relevance of the approaches to calculating Bayesian posterior densities for a variety of structured models will be discussed and illustrated.},
  author = {Alan E. Gelfand and Adrian F. M. Smith},
  journal = {Journal of the American Statistical Association},
@@ -170,7 +170,7 @@ url="https://doi.org/10.1175/JCLI-D-14-00265.1"
 
 @article{GoM1987,
  ISSN = {00401706},
- URL = {https://www.jstor.org/stable/1269878},
+ doi = {https://doi.org/10.2307/2530304},
  abstract = {A collection of I similar items generates point event histories; for example, machines experience failures or operators make mistakes. Suppose the intervals between events are modeled as iid exponential (λ <sub>i</sub>), or the counts as Poisson (λ <sub>i</sub>t<sub>i</sub>), for the ith item. Furthermore, so as to represent between-item variability, each individual rate parameter λ <sub>i</sub>, is presumed drawn from a fixed (super) population with density g<sub>λ</sub>(·;θ), θ being a vector parameter: a parametric empirical Bayes (PEB) setup. For g<sub>λ</sub>, specified alternatively as long-Student t(n) or gamma, we exhibit the results of numerical procedures for estimating superpopulation parameters θ and for describing pooled estimates of the individual rates λ <sub>i</sub>, obtained via Bayes's formula. Three data sets are analyzed, and convenient explicit approximate formulas are furnished for λ <sub>i</sub> estimates. In the Student-t case, the individual estimates are seen to have a robust quality.},
  author = {Donald P. Gaver and I. G. O'Muircheartaigh},
  journal = {Technometrics},
